0.5.1
-----
1. Better display of time in now-playing.
2. Fix updating time in now-playing.
3. Fix favourites update handling, due to error with logging.
4. Tweak mobile now-playing progressbar position.
5. Use dialog to set sleep.
6. Fix 'Play album starting at track'
7. Fix sleep timer countdown display.

0.5.0
-----
 1. When browsing, load all list items (max 25k) at once. Use view recycler
    library to keep lists responsive - only items on screen are part of the HTML
    page. An A..Z quick list is shown to the left of the list allowing to
    quickly jump within list.
 2. Due to the above, a maximum of 300 items can be shown in a grid, if there
    are more then a list is used.
 3. Optionally show a large letter when scrolling lists, to indicate current
    position. Thanks to sanc909 for the original idea and code.
 4. Change 'Use grid' option to have 3 settings; never, always, and only for
    local libraries.
 5. Update some of the underlying libraries (Vue, Vuetify, Vue Router, and
    Vuex).
 6. Use IndexedDB, and not local storage, to cache browse lists.
 7. Fix 'Move to next in queue' for tracks before the current track.
 8. Fix iOS drag'n'drop.
 9. Add 'Synchronise' to players menu even if group players plugin installed.
10. Double-click queue item to play.
11. Fix clicking on dynamic playlist item.
12. Use cometd for status updates, instead of polling server.
13. Remove drag'n'drop re-ordering of favorites.
14. Always sort favourites.
15. Ignore "The, El, La, Los, Las, Le, and Les" prefixes when sorting apps and
    favourites.
16. Show times to left/right of now-playing progress bar, as opposed to above
    the bar.
17. Show "Remove from favourites" if item is in favourites, "Add to favourites"
    otherwise.
18. For 1st 15 seconds when connection is lost; disable player menu, and show
    a spinner top right. After this, full screen connection lost dialog is
    shown.
19. Add setting for lock screen and notifications; never, always, or only whilst